--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.bartoszlipinski:recyclerviewheader2:2.0.1'
+    compile 'org.litepal.android:core:1.4.1'
 }
