--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
 
     <application
         android:name="org.litepal.LitePalApplication"
@@ -12,9 +17,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login">
-
-        </activity>
+        <activity android:name=".Login" />
         <activity android:name=".LiveActivity" />
         <activity android:name=".HelpActivity" />
         <activity android:name=".FriendsActivity" />
@@ -24,7 +27,7 @@
         <activity android:name=".MyAnswersActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".SearchActivity" />
-        <activity android:name=".MessageActivity" />
+        <activity android:name=".MessageActivity" android:windowSoftInputMode="stateHidden" />
 
         <service
             android:name=".NotificationService"
@@ -57,6 +60,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddQuestion" />
+        <activity android:name=".SendMessageActivity"></activity>
+
+        <provider
+            android:authorities="studybos.com.studybos2.fileprovider"
+            android:name="android.support.v4.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
+
     </application>
 
 </manifest>
